--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      # - develop
+      - develop
 
 jobs:
   ubuntu:
@@ -13,11 +13,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Add ~/.local/bin to PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Install required packages
         run: sudo apt-get update && sudo apt-get install -y curl git iproute2 locales tar tzdata wget zsh
 
       - name: Install dotfiles
-        run: chmod +x install.sh && ./install.sh all apt
+        run: chmod +x install.sh && ./install.sh && dots all apt
 
   fedora:
     runs-on: ubuntu-latest
@@ -26,11 +29,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Add ~/.local/bin to PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Install required packages
         run: dnf install -y git
 
       - name: Install dotfiles
-        run: chmod +x install.sh && ./install.sh all brew
+        run: chmod +x install.sh && ./install.sh && dots all brew
 
   arch:
     runs-on: ubuntu-latest
@@ -38,6 +44,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Add ~/.local/bin to PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install sudo
         run: |
@@ -49,4 +58,4 @@ jobs:
         run: pacman -Syu --noconfirm git
 
       - name: Install dotfiles
-        run: chmod +x install.sh && ./install.sh all brew
+        run: chmod +x install.sh && ./install.sh && dots all brew
