--- a/assets/ci/fedora/Dockerfile
+++ b/assets/ci/fedora/Dockerfile
@@ -36,6 +36,8 @@ RUN groupadd -g $GID $GROUPNAME && \
 
 USER $USERNAME
 WORKDIR /home/$USERNAME/
+ENV HOME="/home/$USERNAME"
+ENV PATH="$HOME/.local/bin:$PATH"
 
 # Add dotfiles
 ARG DOTFILES_DIR=/home/$USERNAME/dotfiles
@@ -45,7 +47,11 @@ COPY --chown=$USERNAME:$USERNAME assets $DOTFILES_DIR/assets
 COPY --chown=$USERNAME:$USERNAME install.sh $DOTFILES_DIR
 COPY --chown=$USERNAME:$USERNAME Brewfile $DOTFILES_DIR
 
+# Install dots
+RUN cd dotfiles && bash install.sh
+
 # Shellenv
 ENV SHELL=/bin/zsh
+RUN touch "$HOME/.zshrc"
 CMD [ "zsh" ]
 
