🐳 add and update Dockerfile

--- a/assets/ci/ubuntu/22.04/Dockerfile
+++ b/assets/ci/ubuntu/22.04/Dockerfile
@@ -1,22 +1,23 @@
-FROM ubuntu
+FROM ubuntu:22.04
 
 SHELL [ "/bin/bash", "-c" ]
 
 # Timezone
 ENV TZ=Asia/Tokyo
+RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
 # Install apt packages
 RUN apt-get update && \
-  apt-get install -y \
-  curl \
-  git \
-  iproute2 \
-  locales \
-  sudo \
-  tar \
-  tzdata \
-  wget \
-  zsh
+	apt-get install -y \
+	curl \
+	git \
+	iproute2 \
+	locales \
+	sudo \
+	tar \
+	tzdata \
+	wget \
+	zsh
 
 # Locale
 RUN locale-gen ja_JP
@@ -32,9 +33,9 @@ ARG GID=2000
 ARG PASSWORD=user
 
 RUN groupadd -g $GID $GROUPNAME && \
-  useradd -m -s /bin/zsh -u $UID -g $GID -G sudo $USERNAME && \
-  echo $USERNAME:$PASSWORD | chpasswd && \
-  echo "$USERNAME   ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
+	useradd -m -s /bin/zsh -u $UID -g $GID -G sudo $USERNAME && \
+	echo $USERNAME:$PASSWORD | chpasswd && \
+	echo "$USERNAME   ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 USER $USERNAME
 WORKDIR /home/$USERNAME/
 ENV HOME="/home/$USERNAME"
