--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Install Ruby and Bundler
+        run: |
+          sudo apt-get install ruby-full -y
+          gem install bundler
       - name: Copy README.md to index.md
         run: cp README.md index.md
       - name: Install dependencies
