--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,6 +34,8 @@ jobs:
         run: |
           sudo apt-get install ruby-full -y
           gem install bundler --user-install
+      - name: Add RubyGems to PATH
+        run: echo "PATH=$HOME/.gem/ruby/$(ruby -e 'print RUBY_VERSION[/\d+\.\d+/]')/bin:$PATH" >> $GITHUB_ENV
       - name: Copy README.md to index.md
         run: cp README.md index.md
       - name: Install dependencies
