--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,4 +1,3 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
@@ -34,11 +33,16 @@ jobs:
       - name: Check Ruby environment
         run: gem env
 
-      - name: Copy README.md to index.md
-        run: cp README.md index.md
+      - name: Create Gemfile
+        run: |
+          echo 'source "https://rubygems.org"' > Gemfile
+          echo 'gem "github-pages", group: :jekyll_plugins' >> Gemfile
 
       - name: Install dependencies
         run: bundle install
+
+      - name: Copy README.md to index.md
+        run: cp README.md index.md
 
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
