--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: My GitHub Pages Site
+title: Dotfiles
 remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-include-cache
+minimal_mistakes_skin: "dark"
