📝 docs: add favicon.ico to gh-pages

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Copy _includes to ./
+        run: cp -r .github/pages/_includes ./
+      - name: Copy favicon.ico to ./
+        run: cp .github/pages/favicon.ico ./
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
