--- a/config/starship/multiline.toml
+++ b/config/starship/multiline.toml
@@ -11,20 +11,34 @@ $time
 
 #add_newline = false
 
-[git_branch]
-# symbol = " "
-format = '[$symbol$branch(:$remote_branch)]($style) '
-
-[character]
-format = '$symbol '
-success_symbol = '[➜](bold green)'
-error_symbol = '[!](bold red)'
-
 [python]
 symbol = ' '
 format = '[(\($virtualenv\) )]($style)'
 version_format = '${raw}'
 style = 'yellow bold'
+
+# [golang]
+# symbol = " "
+# format = '[$symbol($version )($mod_version )]($style)'
+#
+# [nodejs]
+# symbol = " "
+# format = '[$symbol($version )](bold green)'
+
+[git_branch]
+# symbol = " "
+format = '[$symbol$branch(:$remote_branch)]($style) '
+
+[git_status]
+ahead = '⇡${count}'
+diverged = '⇕⇡${ahead_count}⇣${behind_count}'
+behind = '⇣${count}'
+#windows_starship = '/mnt/c/Users/username/scoop/apps/starship/current/starship.exe'
+
+[character]
+format = '$symbol '
+success_symbol = '[➜](bold green)'
+error_symbol = '[!](bold red)'
 
 [directory]
 read_only = " 󰌾"
