--- a/config/lazygit/config.yml
+++ b/config/lazygit/config.yml
@@ -51,6 +51,8 @@ gui:
     theme:
         # Border color of focused window
         activeBorderColor:
+            # - "#8787ff"
+            # - bold
             - green
             - bold
         # Border color of non-focused windows
@@ -62,7 +64,8 @@ gui:
             - bold
         # Color of keybindings help text in the bottom line
         optionsTextColor:
-            - blue
+            - "#8787ff"
+            # - blue
         # Background color of selected line.
         # See https://github.com/jesseduffield/lazygit/blob/master/docs/Config.md#highlighting-the-selected-line
         selectedLineBgColor:
@@ -110,7 +113,7 @@ gui:
     # Nerd fonts version to use.
     # One of: '2' | '3' | empty string (default)
     # If empty, do not show icons.
-    nerdFontsVersion: ""
+    nerdFontsVersion: "3"
     # If true (default), file icons are shown in the file views. Only relevant if NerdFontsVersion is not empty.
     showFileIcons: true
     # Length of author name in (non-expanded) commits view. 2 means show initials only.
@@ -284,10 +287,11 @@ os:
     openDirInEditor: ""
     # A built-in preset that sets all of the above settings. Supported presets
     # are defined in the getPreset function in editor_presets.go.
-    editPreset: ""
+    editPreset: "nvim"
     # Command for opening a file, as if the file is double-clicked. Should
     # contain "{{filename}}", but doesn't support "{{line}}".
-    open: ""
+    open: "xdg-open {{filename}} >/dev/null"
+    #open: "open {{filename}}"
     # Command for opening a link. Should contain "{{link}}".
     openLink: ""
     # EditCommand is the command for editing a file.
