--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -17,17 +17,20 @@
     "editor.fontFamily": "'HackGen35 Console NF', Consolas, 'Courier New', monospace",
     "editor.fontLigatures": true,
     "editor.fontSize": 15,
+    "editor.formatOnPaste": false,
     "editor.guides.bracketPairs": true,
     "editor.minimap.enabled": true,
     "editor.minimap.maxColumn": 80,
     "editor.minimap.showSlider": "always",
     "editor.mouseWheelZoom": true,
+    "editor.multiCursorModifier": "ctrlCmd",
     "editor.renderControlCharacters": true,
     "editor.renderLineHighlight": "all",
     "editor.renderWhitespace": "all",
     //"editor.rulers": [80, 120],
     "editor.showFoldingControls": "always",
     //"editor.smoothScrolling": true,
+    "editor.snippetSuggestions": "top",
     "editor.suggestSelection": "first",
     "editor.wordSegmenterLocales": "ja",
     "editor.wrappingIndent": "indent",
@@ -40,6 +43,8 @@
 
     // Files
     "files.autoGuessEncoding": true,
+    //"files.autoSave": "afterDelay", // "off", "afterDelay", "onFocusChange", "onWindowChange"
+    "files.autoSaveDelay": 500,
     "files.candidateGuessEncodings": ["utf8", "shiftjis"],
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
@@ -49,6 +54,23 @@
     "git.confirmSync": true,
     "git.pruneOnFetch": true,
     "git.suggestSmartCommit": false,
+
+    // Live server
+    "liveServer.settings.CustomBrowser": "chrome",
+    "liveServer.settings.donotShowInfoMsg": true,
+    "liveServer.settings.root": "/",
+    "liveServer.settings.port": 81,
+    /*
+    "liveServer.settings.useWebExt": true,
+    "liveServer.settings.proxy": {
+        "enable": true,
+        "baseUri": "/",
+        "proxyUri": "http://192.168.x.y:80" // actual address
+    },
+    */
+
+    // Remote SSH
+    "remote.SSH.showLoginTerminal": true,
 
     // SCM (Source Control)
     "scm.alwaysShowRepositories": true,
