--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -9,13 +9,13 @@
 import = ["~/.config/alacritty/keybindings.toml"]
 live_config_reload = true
 working_directory = "None"
-
+ipc_socket = true
 
 [debug]
-log_level = "Warn"
-persistent_logging = false
-print_events = false
 render_timer = false
+persistent_logging = false
+log_level = "Warn"
+print_events = false
 
 #--------------------------------------------------
 # colors
@@ -100,10 +100,14 @@ style = "Regular"
 
 [mouse]
 hide_when_typing = false
+bindings = [
+  { mouse = "Right", mods = "Control", action = "Paste" },
+  { mouse = "Middle", action = "PasteSelection" },
+]
 
-[[mouse.bindings]]
-action = "PasteSelection"
-mouse = "Middle"
+# [[mouse.bindings]]
+# action = "PasteSelection"
+# mouse = "Middle"
 
 [scrolling]
 history = 10000
@@ -127,6 +131,43 @@ program = "/bin/zsh"
 # [shell]
 # args = ["-l", "-c", 'zellij attach default || zellij --session=default']
 # program = "/bin/bash"
+
+[cursor]
+style = { shape = "Beam", blinking = "Always" }
+blink_interval = 500
+blink_timeout = 30
+thickness = 0.20
+
+#--------------------------------------------------
+# hints
+#--------------------------------------------------
+
+[hints]
+alphabet = "jfkdls;ahgurieowpq"
+
+[[hints.enabled]]
+command = "xdg-open" # On Linux/BSD
+# command = "open" # On macOS
+# command = { program = "cmd", args = [ "/c", "start", "" ] } # On Windows
+hyperlinks = true
+post_processing = true
+persist = false
+mouse.enabled = true
+binding = { key = "O", mods = "Control|Shift" }
+regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`\\\\]+"
+
+#--------------------------------------------------
+# bell
+#--------------------------------------------------
+
+[bell]
+animation = "Ease"
+duration = 0
+color = "#ffffff"
+command = "None"
+# [bell.command]
+# program = "<string>"
+# args = ["<string>",]
 
 #--------------------------------------------------
 # window
