✨ feat: Add CopyQ

--- a/assets/scripts/dconf/shortcuts.ini
+++ b/assets/scripts/dconf/shortcuts.ini
@@ -12,3 +12,13 @@ name='VS Code'
 binding='<Primary><Super><Alt>c'
 command='gnome-calculator'
 name='Launch Calculator'
+
+[custom3]
+binding='<Primary><Shift>v'
+command='copyq menu'
+name='Copyq menu'
+
+[custom4]
+binding='<Primary><Super><Alt>g'
+command='ghostty'
+name='Ghostty'
