--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -53,11 +53,11 @@ TERM = "xterm-256color"
 #--------------------------------------------------
 
 [font]
-#size = 10.0
-#size = 10.5
-#size = 11.0
-#size = 13.0
-size = 15.0
+# Linux
+size = 12.0
+
+# macOS
+#size = 15.0
 
 [font.offset]
 x = 0
