✨ feat: Add Flameshot and shortcuts config

--- a/assets/scripts/dconf/shortcuts.ini
+++ b/assets/scripts/dconf/shortcuts.ini
@@ -22,3 +22,13 @@ name='Copyq menu'
 binding='<Primary><Super><Alt>g'
 command='ghostty'
 name='Ghostty'
+
+[custom5]
+binding='<Primary><Super><Alt>f'
+command='flameshot gui -c'
+name='Flameshot'
+
+[custom6]
+binding='<Primary><Super><Alt>p'
+command='flameshot gui'
+name='Flameshot'
