--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -6,7 +6,10 @@
 #--------------------------------------------------
 
 [general]
-import = ["~/.config/alacritty/keybindings.toml"]
+import = [
+  "~/.config/alacritty/keybindings.toml",
+  "~/.config/alacritty/window.toml",
+]
 live_config_reload = true
 working_directory = "None"
 ipc_socket = true
@@ -169,27 +172,6 @@ command = "None"
 # [bell.command]
 # program = "<string>"
 # args = ["<string>",]
-
-#--------------------------------------------------
-# window
-#--------------------------------------------------
-
-[window]
-decorations = "Full" #"None"
-# decorations = "None"
-dynamic_padding = false
-dynamic_title = true
-opacity = 0.95
-option_as_alt = "both"
-startup_mode = "Windowed"
-
-[window.dimensions]
-columns = 200
-lines = 60
-
-[window.padding]
-x = 4
-y = 4
 
 #--------------------------------------------------
 # keyboard
