--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,9 +33,11 @@ jobs:
       - name: Download image from GitHub Releases
         run: |
           mkdir -p assets/images
-          curl -L -o assets/images/irichu-dotfiles-main-screenshot.png https://github.com/irichu/dotfiles/releases/download/v0.4.0/ss001-v0.4.0.png
+          curl -L -o assets/images/irichu-dotfiles-main-screenshot.png https://github.com/irichu/dotfiles/releases/download/v0.5.0/terminal-fastfetch.png
       - name: download ubuntu desktop image
         run: curl -L -o assets/images/irichu-dotfiles-ubuntu-desktop.png https://github.com/irichu/dotfiles/releases/download/v0.5.0/ubuntu-desktop2.png
+      - name: download ubuntu desktop image
+        run: curl -L -o assets/images/irichu-dotfiles-ubuntu-desktop-tv.png https://github.com/irichu/dotfiles/releases/download/v0.5.0/ubuntu-desktop3.png
       - name: Copy _includes to ./
         run: cp -r .github/pages/_includes ./
       - name: Copy favicon.ico to ./
