--- a/config/termux/termux.properties
+++ b/config/termux/termux.properties
@@ -1,4 +1,11 @@
 extra-keys = [ \
- ['ESC','BACKSLASH','-','/','UP',':','PGUP','DEL'], \
- ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN','BKSP'] \
+ ['ESC','BACKSLASH','-','/','UP',':','PGUP','!'], \
+ ['TAB','CTRL','ALT','LEFT','DOWN','RIGHT','PGDN','SHIFT'] \
 ]
+ctrl-space-workaround = true
+disable-hardware-keyboard-shortcuts = true
+# fullscreen = true
+shortcut.create-session=ctrl + t
+shortcut.next-session=ctrl + N
+shortcut.previous-session=ctrl + P
+
