--- a/.github/workflows/tokei.yml
+++ b/.github/workflows/tokei.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v6
 
-      - name: Install tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
+      - name: Install jq
+        uses: taiki-e/install-action@v2
+        with:
+          tool: jq
 
       - name: Install tokei
         uses: taiki-e/install-action@v2
