--- a/.github/workflows/tokei.yml
+++ b/.github/workflows/tokei.yml
@@ -18,9 +18,10 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install jq
-        uses: taiki-e/install-action@v2
-        with:
-          tool: jq
+        uses: dcarbone/install-jq-action@v3
+
+      - name: Check jq version
+        run: jq --version
 
       - name: Install tokei
         uses: taiki-e/install-action@v2
