--- a/.github/workflows/tokei.yml
+++ b/.github/workflows/tokei.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Commit and push if changed
         run: |
-          if git diff --quiet; then
+          if [ -z "$(git status --porcelain)" ]; then
             echo "No changes to commit"
             exit 0
           fi
